<resources>
    <string name="app_name">Freadom</string>
    <string name="username">Nome</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Numero di telefono</string>
    <string name="position">Posizione</string>
    <string name="editIcon">default_descriptor</string>
    <string name="title_dialog">Cambia foto</string>
    <string name="camera_option_dialog">Scatta foto</string>
    <string name="gallery_option_dialog">Scegli foto</string>
    <string name="negative_button_dialog">Annulla</string>
    <string name="shared_preferences" translatable="false">SharedPreferencesKey</string>
    <string name="title_activity_position">Map</string>
    <string name="text_position_toolbar">Cerca</string>
    <string name="service_not_available">Nessun geocoder disponibile</string>
    <string name="invalid_lat_long_used">Errata Latitudine o Longitudine usata</string>
    <string name="no_address_found">Nessun indirizzo trovato</string>
    <string name="address_text">Indirizzo</string>
    <string name="short_bio_text" translatable="false">Breve Descrizione</string>
    <string name="selection_position">Seleziona la tua posizione</string>
    <string name="enable_internet">Connettersi ad una rete per selezionare una nuova posizione</string>
    <string name="no_internet_connection">Connessione ad internet assente</string>
    <string name="edit_title_activity">Modifica il tuo profilo</string>
    <string name="isbn">ISBN</string>
    <string name="title">Titolo</string>
    <string name="load_book_auto_fill_icon_desc">Icona che permette di scaricare informazioni di un libro da internet</string>
    <string name="author">Autore</string>
    <string name="publisher">Editore</string>
    <string name="publishing_year">Anno di pubblicazione</string>
    <string name="conditions">Condizioni</string>
    <string name="bad">Cattive</string>
    <string name="decent">Discrete</string>
    <string name="good">Buone</string>
    <string name="great">Ottime</string>
    <string name="neww">Nuovo</string>
    <string name="invalid_isbn">Codice ISBN-13 invalido</string>
    <string name="scan_isbn_hint">Inquadrare il codice a barre posto sul retro del libro</string>
    <string name="load_book_toolbar_title">Aggiungi un nuovo libro</string>
    <string name="load_book_book_not_found">Libro non trovato</string>
    <string name="load_book_autofill_request_error">Errore durante la richiesta delle informazioni del libro</string>
    <string name="connection_internet_dialog">Attesa della connessione internet</string>
    <string name="email_verification">Verificare l\'email per procedere con il login, altrimenti cambiare metodo di accesso.</string>
    <string name="title_home">Home</string>
    <string name="title_loans">Prestiti</string>
    <string name="title_requests">Richieste</string>
    <string name="title_profile">Profilo</string>
    <string name="profile_info_fragment">Info</string>
    <string name="profile_reviews_fragment">Recensioni</string>
    <string name="search">Cerca</string>
    <string name="filter">Filtra</string>
    <string name="verification_email_confirm">OK</string>
    <string name="load_book_fill_fields">Completare tutti i campi prima di confermare</string>
    <string name="confirm">Conferma</string>
    <string name="loan_your_item">Libri dati in prestito</string>
    <string name="loan_other_book_item">Libri ricevuti</string>
    <string name="request_done_item">Effettuate</string>
    <string name="request_received_item">Ricevute</string>
    <string name="load_book_upload">Upload del libro in corso</string>
    <string name="load_book_upload_error">Impossibile caricare il libro</string>
    <string name="load_book_tags">Aggiungi parole chiave per la ricerca del libro</string>
    <string name="tags">Tags</string>
    <string name="condition_poor">Cattive</string>
    <string name="condition_fair">Discrete</string>
    <string name="condition_good">Buone</string>
    <string name="condition_near_mint">Ottime</string>
    <string name="condition_mint">Perfette</string>
    <string name="toolbar_title_home">Freadom</string>
    <string name="activate_position">Attivare la posizione</string>
    <string name="activate">Attiva</string>
    <string name="button_signin">ACCEDI</string>
    <string name="access_without_login">CONTINUA SENZA ACCEDERE</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Impostazioni</string>
    <string name="title_notifications">Notifications</string>
    <string name="no_email_nav_drawer">Nessuna email</string>
    <string name="no_name_nav_drawer">Nessun nome</string>
    <string name="button_right_recycler_view">ALTRO</string>
    <string name="book_thumbnail_content_description">Anteprima del libro</string>
    <string name="add_to_favorite">Aggiungi ai preferiti</string>
    <string name="share">Condividi</string>
    <string name="preview">Anteprima</string>
    <string name="book">Prenota</string>
    <string name="filter_by">Filtra per</string>
    <string name="book_request">Richiedi</string>
    <string name="filter_dialog_title">Filtra per</string>
    <string name="search_books_hint">Titolo, autore, editore, tags…</string>
    <string name="your_library_fragment">La tua libreria</string>
    <string name="your_library_advice">Qui troverai i tuoi libri una volta caricati. Premi sul simbolo + in basso per aggiungere il primo libro</string>
    <string name="position_filter_home_page">POSIZIONE</string>
    <string name="genre_filter_home_page">GENERI</string>
    <string name="latest_arrivals_home_page">Nuovi arrivi</string>
    <string name="condition">Condizioni:  %1$s</string>
    <string name="reviews">Recensioni</string>
    <string name="books">Libri</string>
    <string name="rating">Rating</string>
    <string name="rating_global_profile">Rating: %.1f</string>
    <string name="library">Libreria</string>
    <string-array name="genre">
        <item>Arte</item>
        <item>Biografie</item>
        <item>Economia</item>
        <item>Fantasy</item>
    </string-array>
    <string name="tutorial_title_genre">Cerca i libri in base al tuo genere preferito</string>
    <string name="tutorial_title_position">Cerca i libri in base alla tua posizione attuale</string>
    <string name="tutorial_title_search">Cerca uno specifico libro</string>
    <string name="min_selection">Seleziona almeno un elemento</string>
    <string name="book_owner_text">I libri di %1$s</string>
    <string name="search_no_connection_1">Connessione a Internet assente</string>
    <string name="search_no_connection_2">Controlla la connessione ai dati mobili o al Wi-Fi</string>
    <string name="try_again">Riprova</string>
    <string name="search_by">Ricerca per</string>
    <string name="search_by_title">Cerca per:</string>
    <string name="dialog_isbn_search">Cerca su Internet</string>
    <string name="dialog_isbn_scan">Leggi da codice a barre</string>
    <string name="load_new_book">Aggiungi un nuovo libro</string>
    <string-array name="search_by_address_or_current_position_items">
        <item>Tramite ricerca indirizzo</item>
        <item>Tramite la posizione corrente</item>
    </string-array>
    <string name="genre_hint">Genere</string>
    <string name="date">Inserisci il periodo di prestito</string>
    <string name="isbn_hint">Inserire il codice ISBN</string>
    <string name="add_your_photos">Aggiungi le foto del libro</string>
    <string name="insert_book">Inserisci il libro</string>
    <string name="add_isbn_code">Aggiungi il codice ISBN</string>
    <string name="insert_manually">Inserisci manualmente</string>
    <string name="insert_isbn_code">Inserisci il codice ISBN del libro</string>
    <string name="search_by_address_or_current_position">Scegliere il metodo di condivisione della posizione</string>
    <string name="yes">Si</string>
    <string name="choose_initial_date">Seleziona data inizio prestito</string>
    <string name="ok">OK</string>
    <string name="choose_end_date">Seleziona data fine prestito</string>
    <string name="confirm_date">Conferma data</string>
    <string name="loan_successfully_sent">Inizio prestito iniziato con successo</string>
    <string name="confirm_loan_title">Confermi inizio prestito?</string>
    <string name="confirm_reject_title">Confermi rifiuto prestito?</string>
    <string name="confirm_reject_end_title">Confermi rifiuto fine prestito?</string>
    <string name="confirm_reject_end_message">Puoi rifiutare la fine del prestito se non hai ancora restituito il libro al proprietario e lui ha concluso il prestito per errore. Vuoi confermare annullamento fine?</string>
    <string name="confirm_loan_text">Una volta confermato le altre chat aperte saranno cancellate. Questo libro non sarà più disponibile da altri utenti finché non terminerai il tuo prestito.</string>
    <string name="confirm_reject_message">Se rifiuti il prestito il proprietario sarà informato che non hai più intenzione di voler ricevere il suo libro</string>
    <string name="confirm_loan_init_message">Il proprietario ha deciso di prestarti il suo libro. Clicca sul tasto conferma se sei d\'accordo. Se c\'è qualcosa di sbagliato (ad esempio la data) puoi rifiutare l\'inizio del prestito. Il proprietario potrà comunque iniziarti il prestito in un secondo momento. </string>
    <string name="loan_button_info_title">Info</string>
    <string name="start_loan_button_info_text">Il pulsante \"Inizia prestito\" serve per segnalare all\' altro utente che hai intenzione di prestergli il libro, per un determinato periodo. Se l\'altro utente confermerà, il prestito diventerà attivo ed il libro non sarà disponibile per altri utenti</string>
    <string name="end_loan_button_info_text">Il pulsante di fine prestito deve essere premuto una volta che il libro è stato restituito o sta per essere restituito. Una volta premuto, l\'utente che ha ricevuto il libro dovrà confermare la fine. Accertati che lo faccia! </string>
    <string name="end_loan">Termina prestito</string>
    <string name="confirm_init">Conferma prestito</string>
    <string name="confirm_end">Conferma fine</string>
    <string name="reject_end">Annulla fine</string>
    <string name="reject_init">Rifiuta prestito</string>
    <string name="confirm_init_message">Il proprietario ha intenzione di prestarti il suo libro da %1$s a %2$s</string>
    <string name="confirm_end_message">Il proprietario ha intenzione di terminare il prestito. Confermi che lo scambio sta per concludersi?</string>
    <string name="from_date">Da: %1$s</string>
    <string name="to_date">A: %1$s</string>
    <string name="confirm_end_title">Confermi fine prestito?</string>
    <string name="confirm_end_text">L\'utente ti ha effettivamente restituito il libro? In caso affermativo il libro tornerà disponibile e potrai ricevere nuove richieste da altri utenti</string>
    <string name="click_position_button">Aggiungi posizione</string>
    <string name="select_genres">Selezionare i generi che si vogliono visualizzare</string>
    <string name="cancel">Annulla</string>
    <string name="choose_genre">Selezionare il genere a cui si è interessati</string>
    <string name="no_genre_in_particular">Nessuno in particolare</string>
    <string name="tag">Tag</string>
    <string name="conversations_title">Conversazioni</string>
    <string name="enter_message">Inserisci il messaggio</string>
    <string name="send">Invia</string>
    <string name="position_not_available">Posizione non disponibile</string>
</resources>