<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_loadbook"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"></android.support.v7.widget.Toolbar>

        <ImageSwitcher
            android:id="@+id/imageSwitcher"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_load_book_image_switcher_height"></ImageSwitcher>

        <EditText
            android:id="@+id/load_book_isbn"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/activity_load_book_content_padding"
            android:layout_marginStart="@dimen/activity_load_book_content_padding"
            android:layout_marginTop="@dimen/activity_load_book_edit_text_margin"
            android:hint="@string/isbn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageSwitcher" />

        <ImageView
            android:id="@+id/load_book_auto_fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/load_book_isbn"
            android:layout_centerInParent="true"
            android:layout_marginEnd="6dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/load_book_auto_fill_icon_desc"
            android:padding="5dp"
            android:src="@drawable/ic_search_black_24dp"
            app:layout_constraintEnd_toEndOf="@id/load_book_isbn"
            app:layout_constraintTop_toTopOf="@id/load_book_isbn" />

        <EditText
            android:id="@+id/load_book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_load_book_content_padding"
            android:layout_marginStart="@dimen/activity_load_book_content_padding"
            android:layout_marginTop="@dimen/activity_load_book_edit_text_margin"
            android:hint="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/load_book_isbn" />

        <EditText
            android:id="@+id/load_book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_load_book_content_padding"
            android:layout_marginStart="@dimen/activity_load_book_content_padding"
            android:layout_marginTop="@dimen/activity_load_book_edit_text_margin"
            android:hint="@string/author"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/load_book_title" />

        <EditText
            android:id="@+id/load_book_publisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/publisher"
            android:layout_marginStart="@dimen/activity_load_book_content_padding"
            android:layout_marginEnd="@dimen/activity_load_book_content_padding"
            android:layout_marginTop="@dimen/activity_load_book_edit_text_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/load_book_author"/>

        <TextView
            android:id="@+id/load_book_publish_year_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:layout_marginStart="@dimen/activity_load_book_content_padding"
            android:layout_marginTop="@dimen/activity_load_book_edit_text_margin"
            android:hint="@string/publishing_year"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/load_book_publisher" />

        <Spinner
            android:id="@+id/load_book_publish_year_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="@dimen/activity_load_book_edit_text_margin"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/load_book_publisher" />

        <TextView
            android:id="@+id/load_book_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:layout_marginStart="@dimen/activity_load_book_content_padding"
            android:layout_marginTop="@dimen/activity_load_book_edit_text_margin"
            android:hint="@string/conditions"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/load_book_publish_year_text_view" />

        <Spinner
            android:id="@+id/load_book_conditions_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_load_book_content_padding"
            android:layout_marginTop="@dimen/activity_load_book_edit_text_margin"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/load_book_publish_year_spinner" />

        <EditText
            android:id="@+id/load_book_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/position"
            android:layout_marginStart="@dimen/activity_load_book_content_padding"
            android:layout_marginEnd="@dimen/activity_load_book_content_padding"
            android:layout_marginTop="@dimen/activity_load_book_edit_text_margin"
            app:layout_constraintTop_toBottomOf="@id/load_book_conditions"
            />

        <ImageView
            android:id="@+id/load_book_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginEnd="6dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_location_on_black_24dp"
            app:layout_constraintEnd_toEndOf="@+id/load_book_position"
            app:layout_constraintTop_toTopOf="@+id/load_book_position" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>