<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.android.lab1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:id="@+id/relative_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/icon_check_toolbar"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_check_black_24dp" />

            <ImageView
                android:id="@+id/user_profile_edit_image"
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/add_image_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/user_profile_edit_image"
                android:layout_alignEnd="@id/user_profile_edit_image"
                android:src="@drawable/ic_add_a_photo_black_24dp"
                app:elevation="6dp"
                app:layout_anchor="@id/user_profile_edit_image"
                app:layout_anchorGravity="bottom|end" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_text_edit"
                android:layout_width="match_parent"
                android:layout_marginTop="2dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/username" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_text_edit"
                android:layout_width="match_parent"
                android:layout_marginTop="2dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phone_text_edit"
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phoneNumber"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
